index alterado pelo master

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!--hero-->
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
-            <h4>Ola, todos</h4>
+            <h4>Ola, todos...</h4>
             <h1>Eu sou, <span>Egas Lemos</span></h1>
             <p>
                 Com uma sólida formação em HTML, CSS, JavaScript, e frameworks modernos como React e Vue.js, 
