--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </p>
                 <p class="exp">
                     Especialidade:
-                    <span>Desogn de Projectos, Desenvolvimento</span>
+                    <span>Design de Projectos, Desenvolvimento</span>
                 </p>
                 <p class="exp">
                     Endereco:
